Security fixes: auth with hashing/rate limiting, API error handling, input validation, dependency fixes

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-DATABASE_URL=postgresql://user:pass@localhost/dbname
-API_KEY=your_api_key_here
+# Database Configuration
+POSTGRES_USER=user
+POSTGRES_PASSWORD=CHANGE_ME_TO_STRONG_PASSWORD_123!
+POSTGRES_DB=appdb
+DATABASE_URL=postgresql://user:CHANGE_ME_TO_STRONG_PASSWORD_123!@db:5432/appdb
+
+# Optional API Keys
+# OPENWEATHER_API_KEY=your_key_here
+# ALPHAVANTAGE_API_KEY=your_key_here
