--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,20 @@ services:
       - DATABASE_URL=${DATABASE_URL}
     volumes:
       - ./data:/app/data
+    restart: unless-stopped
 
   db:
     image: postgres:15
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: appdb
+      POSTGRES_USER: ${POSTGRES_USER:-user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB:-appdb}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    # Don't expose port externally in production
+    # ports:
+    #   - "5432:5432"
+    restart: unless-stopped
 
 volumes:
   postgres_data:
